<resources>
    <string name="app_name">Blue Trams</string>
    <string name="weekdays">Weekday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="searchHint">Stop or route name…</string>

    <string name="somethingWentWrong">Something went wrong.\nPlease check your connection.</string>
    <string name="tryAgain">TRY AGAIN</string>
    <string name="stopNotFound">Stop or route not found.\nPlease try again.</string>

    <string name="search">Search</string>
    <string name="direction">Direction</string>
    <string name="timetable">Timetable</string>
    <string name="timeline">Timeline</string>
    <string name="stops">Stops</string>
    <string name="route">Route</string>

    <string name="normalBus">Normal bus</string>
    <string name="normalTram">Normal tram</string>
    <string name="seasonalBus">Seasonal bus</string>
    <string name="suburbanBus">Suburban bus</string>
    <string name="expressBus">Express bus</string>
    <string name="zoneBus">Zone bus</string>
    <string name="nightBus">Night bus</string>
    <string name="unknown">Unknown</string>
    <string name="select_direction_first">Please select direction first.</string>
    <string name="select_direction_and_time">Please select direction and time first.</string>
    <string name="icons_attribution">Icons made by Freepik, Pixel Buddha and Smashicons from www.flaticon.com. Waving hand icon by Felix Westphal.</string>
    <string name="author_about_page">Author: Sebastian Frysztak</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="oss_licenses">Open Source Licenses</string>
    <string name="nearby_stops">Nearby stops</string>
    <string name="stops_and_routes">Stops and routes</string>
    <string name="search_results">Search results</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="location_rationale">Your location will be used to find nearby stops, and won\'t ever leave your device.</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="blueTrams" translatable="false">Wieczór zapada, już noc niedaleko\nJuż gwiazdy migocą na niebie\nSrebrzy się Odra, najmilsza ma rzeka\nI płynie z piosenką do ciebie\n\nMkną po szynach niebieskie tramwaje\nPrzez wrocławskich ulic sto\nTu przechodnia uśmiechem witają\nDzieci, kwiaty i każdy dom\n\nNa przystankach nucą słowiki\nDźwięczy śpiewem stary park\nPrzez Sępolno, Zalesie i Krzyki\nNiesie melodię wrocławski wiatr\n\nA kiedy rankiem fabryczne syreny\nDzień dobry powiedzą znów miastu\nSłonko jak jaskier wykwitnie z zieleni\nDziewczyna zaśpiewa przy pracy:\n\nNa przystankach nucą słowiki\nDźwięczy śpiewem stary park\nPrzez Sępolno, Zalesie i Krzyki\nNiesie melodię wrocławski wiatr\n\nNa przystankach nucą słowiki\nPrzez Sępolno, Zalesie i Krzyki\nNiesie melodię wrocławski\nMelodię wrocławski\nMelodię wrocławski wiatr</string>
    <string name="blueTramsCredits">\"Wrocławska piosenka\"\nJerzy Harald - music\nKrystyna Wnukowska - lyrics</string>
    <string name="never">Never</string>
    <string name="find_nearby_stops">Find nearby stops?</string>
    <string name="no_nearby_stops_found">No nearby stops found</string>
    <string name="today">today</string>
    <string name="google_play_error_msg">Unable to find your location, Google Play Services are missing or out of date.</string>
    <string name="location_is_disabled">Location is disabled</string>
    <string name="enable">ENABLE</string>
    <string name="on_demand">on demand</string>
    <string name="failed_to_load_map_data">Failed to load map data</string>
    <string name="you">You</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_map">Map</string>
    <string name="more">more</string>
    <string name="departureIn">In %s (%s)</string>
    <string name="departs_now">Departs now! (%s)</string>
    <string name="already_departed">Departed %s ago (%s)</string>
    <string name="minute_1">minute</string>
    <string name="minutes_2to4">minutes</string>
    <string name="hour">an hour</string>
    <string name="over_hour">over an hour</string>
    <string name="minutes_5plus">minutes</string>
    <string name="near_you">Near you</string>
    <string name="show_more">show more…</string>
    <string name="news">News</string>
    <string name="favourites">Favourites</string>
    <string name="where_to">Where to?</string>
    <string name="add">add</string>

    <string name="line">Line %s</string>
    <string name="lines">Lines %s</string>
    <string name="failed_to_load_news">Failed to load news</string>

    <string name="published_on">Published on: %s</string>
    <string name="affects_days">Affects days: %s</string>
    <string name="affects_lines">Affects lines: %s</string>

</resources>
