<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="4dp"
        android:theme="@style/ToolbarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:title="Toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/app_icon" />

            <TextView
                android:id="@+id/appName"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="28sp"
                app:layout_constraintTop_toBottomOf="@id/appLogo" />

            <TextView
                android:id="@+id/appAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/author_about_page"
                app:layout_constraintTop_toBottomOf="@id/appName" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/appAuthor"
                tools:text="Version 1.0" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="16dp"
                android:foreground="@color/divider"
                app:layout_constraintTop_toBottomOf="@id/appVersion" />

            <TextView
                android:id="@+id/icons"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/icons_attribution"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="16dp"
                android:foreground="@color/divider"
                app:layout_constraintTop_toBottomOf="@id/icons" />

            <FrameLayout
                android:id="@+id/libraries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>